<resources>
    <string name="app_name">WarframeAlertApp</string>
    <string name="view_alerts_btn">View Alerts</string>
    <string name="options">Options</string>
    <string name="enable_run_in_background_n_required_for_alarms">Enable run in background  \n(Required for alarms)</string>
    <string name="set_alarms">Set Alert Notifications</string>
    <string name="edit_item_names">Edit Item Names</string>
    <string name="refresh_app">Try Again</string>
    <string name="no_connection_close">Close</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back">Back</string>
    <string name="change_platform">Change platform</string>
    <string name="xb1">XB1</string>
    <string name="ps4">PS4</string>
    <string name="pc">PC</string>
    <string name="options_menu">Options Menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="enable_rib">Enable run in background</string>
    <string name="rib_summary">Turning off will disable notifications, but will save data</string>
    <string name="settings">Settings</string>
    <string name="rename_items">Rename Items</string>
    <string name="set_notifications">Set Notifications</string>
    <string name="change_console">Change Console</string>
    <string name="cur_console_key">CurConsole</string>
    <string name="alerts">Alerts</string>
    <string name="messages">Messages</string>
    <string name="invasions">Invasions</string>
    <string name="Warframe">Warframe</string>
    <string name="rename_factions">Rename factions</string>
    <string name="rename_rewards">Rename rewards</string>
    <string name="rename_mission_types">Rename mission types</string>
    <string name="rename_locations">Rename locations</string>
    <string name="save_changes">Save Changes</string>
    <string name="rename">Rename</string>
    <string name="language_code_for_messages">en</string>
    <string name="search">Search</string>
    <string name="save_all_changes">Save all changes</string>
    <string name="notifications">Notifications</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all_notifications_warning">Are you sure you want to remove all notifications?</string>
    <string name="reset_all_to_default">Reset All To Default</string>
    <string name="reset_names_warning">This will reset all set notifications, are you sure?</string>
    <string name="starts_in">Starts in\n</string>
    <string name="expired">Expired</string>
    <string name="phorid">Phorid</string>
    <string name="now">Now</string>
    <string name="h_ago">h ago</string>
    <string name="d_ago">d ago</string>
    <string name="credits">credits</string>
    <string name="lvl">Lvl</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="notifications_cleared">Notifications Cleared</string>
    <string name="all_names_reset">All Names Reset</string>
    <string name="alert">ALERT</string>
    <string name="invasion">INVASION</string>
    <string name="available_now">available now!</string>
    <string name="turn_all_notifications_on">Turn All Notifications On</string>
    <string name="all_notifications_ativated">All Notifications Activated</string>
    <string name="activate_all_notifications_warning">Are you sure you want to activate all notifications?</string>
    <string name="select_data_refresh_rate">Select Data Refresh Rate</string>
    <string name="select_console">Select Console</string>
    <string name="data_refreshed">Data Refreshed</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="not_running_in_background">Run In Background Disabled</string>
    <string name="running_in_background">Run In Backgrount Enabled</string>
    <string name="min">min</string>
    <string name="network_status">Network Status</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Offline</string>
    <string name="no_network">No network connection</string>
</resources>