<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">>

    <header
        android:fragment="com.example.cody.warframealertapp.activities.SettingsActivity$SettingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        />

    <header
        android:fragment="com.example.cody.warframealertapp.activities.SettingsActivity$RenameItemsFragment"
        android:icon="@drawable/ic_create_new_folder_black_24dp"
        android:title="@string/rename_items"
        />

    <header
        android:fragment="com.example.cody.warframealertapp.activities.SettingsActivity$SetNotifications"
        android:icon="@drawable/ic_add_alarm_black_24dp"
        android:title="@string/notifications"
        />


</preference-headers>